--- a/LSIS/public_html/BUTTON.css
+++ b/LSIS/public_html/BUTTON.css
@@ -1,10 +1,19 @@
-.button::before,
+.button::before{
+    position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+        color:white;
+}
 .button::after {
+    
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+        
 }
 
 .button--pan {
@@ -13,7 +22,7 @@
 	border: 2px solid yellow;
 	border-radius: 3rem;
 	overflow: hidden;
-	color: #fff;
+	
 }
 
 .button--pan span {
@@ -22,8 +31,11 @@
 }
 
 .button--pan::before {
-	content: '';
-        
+	content: 'Entrar';
+        text-align:center;
+        text-height: auto;
+            
+       
 	background: #000;
 	transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
 }
@@ -34,16 +46,15 @@
 .button {
 	pointer-events: auto;
 	cursor: pointer;
-	background: #e7e7e7;
-	border: yellow;
+	background: yellow;
+	
 	padding: 1.5rem 3rem;
 	margin-left: 40%;
         top:20px;
-        width: 15%;
-            height: 15%;
-            
+        
+      text-decoration: none;
 	font-family: 'Courier New', monospace;
-	font-size: 20px;
+	font-size: 50px;
 	position: relative;
 	display: inline-block;
 }
