private properties primeiro.css

--- a/LSIS/public_html/primeiro.css
+++ b/LSIS/public_html/primeiro.css
@@ -157,7 +157,6 @@ a:hover {
 
 }
 
-
 .navbar-right {
 
 }.navbar {
@@ -248,10 +247,6 @@ a:hover {
 .show {display:block;}
 
 
-
-
-
-
 .letra {
     font-family: arial;
 }
@@ -267,3 +262,4 @@ a:hover {
 }
 .navbbar-header {
 }bar-header {
+}
