--- a/LSIS/public_html/register_style.css
+++ b/LSIS/public_html/register_style.css
@@ -183,7 +183,7 @@ form {
     margin-left: 20%;
 }
 
-form input[type="text"], input[type="number"], input[type="date"], input[type="email"], input[type="submit"], input[type="time"],input[type="password"], textarea {
+form input[type="text"], input[type="number"], input[type="date"], input[type="email"], input[type="submit"], input[type="time"],input[type="password"], textarea, option, select {
     width: 300px;
     height: 50px;
     padding: 5px;
@@ -197,6 +197,7 @@ form input[type="text"], input[type="number"], input[type="date"], input[type="e
     font-size: 18px;
 
 }
+
 
 form button:hover, input:hover, textarea:hover, input:focus, textarea:focus {
     border-color: #000066;
