--- a/LSIS1/src/main/java/webroot/CSS/register_style.css
+++ b/LSIS1/src/main/java/webroot/CSS/register_style.css
@@ -183,7 +183,7 @@ form {
     margin-left: 20%;
 }
 
-form input[type="text"], input[type="number"], input[type="date"], input[type="email"], input[type="submit"], input[type="time"],input[type="password"], textarea, option, select {
+form input[type="text"], input[type="number"], input[type="date"], input[type="email"], input[type="submit"], input[type="time"],input[type="password"],input[type="button"], textarea, option, select {
     width: 300px;
     height: 50px;
     padding: 5px;
