--- a/LSIS1/src/main/java/webroot/CSS/info.css
+++ b/LSIS1/src/main/java/webroot/CSS/info.css
@@ -212,7 +212,7 @@ form {
     margin-left: 20%;
 }
 
-form input[type="text"], input[type="number"], input[type="date"], input[type="email"], input[type="submit"], textarea {
+form input[type="text"], input[type="number"], input[type="date"], input[type="email"], input[type="submit"],input[type="button"], textarea {
     width: 300px;
     height: 50px;
     padding: 5px;
